--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "vue": "^3.2.38",
     "vue-about-me": "^1.2.7",
     "vue-demi": "^0.13.11",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vuejs-confirm-dialog": "^0.4.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.26.3",
@@ -65,6 +66,7 @@
     "vite-ssg": "0.20.2",
     "vite-ssg-sitemap": "^0.4.1",
     "vitest": "^0.23.0",
+    "vue-template-compiler": "^2.7.10",
     "vue-toastification": "^2.0.0-rc.5",
     "vue-tsc": "^0.40.6"
   }
