--- a/package.json
+++ b/package.json
@@ -17,54 +17,54 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@vueuse/core": "^9.1.1",
-    "@vueuse/head": "^0.7.9",
+    "@vueuse/core": "^9.11.0",
+    "@vueuse/head": "^0.7.13",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.21",
+    "pinia": "^2.0.29",
     "prism-theme-vars": "^0.2.4",
-    "vue": "^3.2.38",
+    "vue": "^3.2.45",
     "vue-about-me": "^1.2.7",
     "vue-demi": "^0.13.11",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.26.3",
-    "@iconify-json/fe": "^1.1.2",
-    "@iconify-json/gg": "^1.1.2",
-    "@iconify-json/ic": "^1.1.9",
-    "@iconify-json/mdi": "^1.1.31",
-    "@iconify-json/ri": "^1.1.3",
+    "@iconify-json/fe": "^1.1.5",
+    "@iconify-json/gg": "^1.1.3",
+    "@iconify-json/ic": "^1.1.12",
+    "@iconify-json/mdi": "^1.1.43",
+    "@iconify-json/ri": "^1.1.4",
     "@pinia/testing": "^0.0.14",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
-    "@vitejs/plugin-legacy": "^2.0.1",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "@vue/test-utils": "^2.0.2",
+    "@vitejs/plugin-legacy": "^2.3.1",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@vue/test-utils": "^2.2.7",
     "consola": "^2.15.3",
     "critters": "^0.0.16",
     "cross-env": "^7.0.3",
-    "eslint": "^8.23.0",
+    "eslint": "^8.32.0",
     "https-localhost": "^4.7.1",
     "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-prism": "^2.3.0",
-    "pnpm": "^7.10.0",
-    "sass": "^1.54.8",
-    "star-markdown-css": "^0.4.0",
-    "terser": "^5.15.0",
-    "tsx": "^3.9.0",
-    "typescript": "^4.8.2",
-    "unocss": "^0.45.15",
-    "unplugin-auto-import": "^0.11.2",
-    "unplugin-vue-components": "^0.22.4",
-    "vite": "^3.0.9",
+    "pnpm": "^7.25.1",
+    "sass": "^1.57.1",
+    "star-markdown-css": "^0.4.1",
+    "terser": "^5.16.1",
+    "tsx": "^3.12.2",
+    "typescript": "^4.9.4",
+    "unocss": "^0.45.30",
+    "unplugin-auto-import": "^0.11.5",
+    "unplugin-vue-components": "^0.22.12",
+    "vite": "^3.2.5",
     "vite-plugin-inspect": "^0.6.1",
     "vite-plugin-pages": "^0.26.0",
     "vite-plugin-vue-layouts": "^0.7.0",
     "vite-plugin-vue-markdown": "^0.21.1",
     "vite-ssg": "0.20.2",
-    "vite-ssg-sitemap": "^0.4.1",
-    "vitest": "^0.23.0",
-    "vue-toastification": "^2.0.0-rc.5",
-    "vue-tsc": "^0.40.6"
+    "vite-ssg-sitemap": "^0.4.3",
+    "vitest": "^0.23.4",
+    "vue-toastification": "2.0.0-rc.5",
+    "vue-tsc": "^0.40.13"
   }
 }
